# Gondolin

./: .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  README.md  TODO.md  bun.lockb  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
scripts/: TODO.nu
src/: args.rs  errors.rs  lib.rs  main.rs  models.rs  net.rs  threadpool.rs
src/web/: card.html  form.html  form.ts  index.html  query.html  query.ts
