[package]
name = "locket"
version = "1.0.0"
edition = "2021"

[dependencies]
# General
fastrand = "2.0.0"
itertools = "0.11.0"
nucleo-matcher = "0.2.0"
rayon = { version = "1.7.0", optional = true }
serde = "1.0.188"
serde_derive = "1.0.188"
serde_with = "3.3.0"
uuid = { version = "1.4.1" , features = ["v4", "serde"] }
thiserror = "1.0.49"
rmp-serde = "1.1.2"
toml = "0.8.2"
directories = "5.0.1"

# CLI
clap = { version = "4.4.0", features = ["derive"] }
color-eyre = "0.6.2"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
tabled = "0.14.0"
clap-verbosity-flag = "2.2.0"

# Web
tiny_http = { version  = "0.12.0", optional = true }
url = { version = "2.4.1", optional = true }
serde_json = { version = "1.0.105" , optional = true }
signal-hook = { version = "0.3.17", optional = true }
log = { version = "0.4.20", optional = true }
pretty_env_logger = { version = "0.5.0",  optional  = true }

[features]
web = ["tiny_http", "url", "serde_json", "signal-hook",  "log", "pretty_env_logger"]
parallel_queries = ["rayon"]
default = ["web", "parallel_queries"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
